[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phisheye"
version = "0.1.0"
description = "Offline phishing-URL risk scanner — catches homograph, typosquat, and DGA tricks the eye can't see. Zero dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Bhupendra Gurjar", email = "bgurjar05.bg@gmail.com" }]
keywords = ["phishing", "security", "url-analysis", "threat-intel", "homograph", "typosquatting", "cybersecurity", "blue-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
phisheye = "phisheye.cli:main"

[project.urls]
Homepage = "https://github.com/bhupendra05/phisheye"

[tool.pytest.ini_options]
testpaths = ["tests"]
